--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.min.css" />
   </head>
   <body>
     <header>
@@ -461,7 +461,7 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="heading-two">Постоянные клиенты</h2>
+          <h2 class="our-team__title">Постоянные клиенты</h2>
           <ul class="clients-list list">
             <li class="clients-item">
               <a
