--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header header-portfolio">
       <div class="container header">
         <a href="index.html" lang="en" class="logo">Web<span class="logo-studio">Studio</span></a>
         <nav class="navigation">
